# Problems

./: .gitignore  CMakeLists.txt  Makefile  README.md  Starters.md  UpSolving.md  codechef_chrl4.cpp  codechef_cnote.cpp  codechef_depchef.cpp  codechef_frgtnlng.cpp  codechef_lecandy.cpp  codechef_lfstack.cpp  codechef_rainbowa.cpp  codechef_start01.cpp  pyrun.py  run.sh  template.cpp
CPP Files/: codechef_amsgame1.cpp  codechef_cutboard.cpp
Problems/: README.md
Resources/: codechef_csub.cpp  codechef_cutboard.cpp  codechef_depchef.cpp  codechef_frgtnlng.cpp  codechef_lecandy.cpp  codechef_stacks.cpp  codechef_start01.cpp
Sessions/: Nov14Solve.md
Solutions/: code_new.cpp  codechecf_stacks.cpp  codechef_csub.cpp  template.cpp
assets/: Quick_Manual(Q&A)_ENG_202407.pptx
include/: headers.h
listings/: codechef_amsgame1.cpp  codechef_chrl4.cpp  codechef_cnote.cpp  codechef_lfstack.cpp  codechef_rainbowa.cpp  codechef_validstk.cpp
src/: 828_3B_test.cpp  codechef_chrl4.cpp  codechef_stacks.cpp  codechef_validstk.cpp  main.cpp  solution.cpp  solution.cpp~  template.cpp
tests/: input01.txt  input02.txt  input03.txt  input05.txt
